--- a/activity/static/css/style.css
+++ b/activity/static/css/style.css
@@ -5,7 +5,8 @@ body {
   }
   
   .topnav {
-    width:100%
+    width:100%;
+    margin: 0;
     overflow: hidden;
     background-color: #3d434c;
   }
@@ -172,7 +173,6 @@ body {
   margin: 5px;
   border: 10px;
   padding: 10px;
-  height: 100px;
   width: 25%;
   background-color: grey;
 }
