--- a/activity/templates/base.html
+++ b/activity/templates/base.html
@@ -1,34 +1,42 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-		{% block title %}<title>Home</title>{% endblock %}
-		<meta name="" contents="">
-		{% load static %}
-			<link rel="stylesheet" href="{% static 'css/style.css' %}">
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		{% block header %}
-		<div class="topnav">
-			  <a class="active" href="{% url 'index' %}">Home</a>
-			  <form type="get" action="." style="margin: 0">
-					<input  id="search_box" type="text" name="search_box"  placeholder="Search..." >
-					<button id="search_submit" type="submit" >Submit</button>
-				</form>
-
-  			{% if user.is_authenticated %}
-			  <a href="{% url 'profile' %}" style="float:right; text-decoration: underline;">{{ user.get_username }}</a>
-     		<a href="{% url 'logout' %}?next={{request.path}}" style= "float:right;">Logout</a>
-
-
-   			{% else %}
-     			<a href="{% url 'login' %}?next={{request.path}}" style= "float:right;">Login</a> 
-     			<a href="{% url 'signup'%}" style= "float:right;">SignUp</a>   
-   			{% endif %} 
-   		{% endblock %}
-		</div>
-	</head>
-
-
-	<body>
-		{% block content %}{% endblock %}
-	</body>
-</html>
+<!DOCTYPE html>
+<!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Thu Jan 24 2019 01:44:37 GMT+0000 (UTC)  -->
+<html data-wf-page="5c35037c38fadfa526bb90b9" data-wf-site="5c35037c38fadfd2c0bb90b6">
+<head>
+  <meta charset="utf-8">
+  {% block title %}<title>Docent</title>{% endblock %}
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta content="Webflow" name="generator">
+  {% load static %}
+  <link href="{% static 'css/normalize.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'css/webflow.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'css/docent-f9cce3.webflow.css' %}" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Lora:regular,italic,700","Oxygen:300,regular,700"]  }});</script>
+  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="{% static 'js/webflow.js' %}" type="text/javascript"></script>
+</head>
+<body>
+{% block header%}
+  <div>
+    <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar-2 w-nav">
+      <div class="w-container">
+        <a href="index.html" class="w-nav-brand w--current">
+          <div class="text-block-2">Docent</div>
+        </a>
+        <nav role="navigation" class="w-nav-menu"><a href="#" class="nav-link-5 w-nav-link">Sign Up</a><a href="#" class="nav-link-3 w-nav-link">Sign In</a><a href="profile.html" class="nav-link-4 w-nav-link">Profile</a></nav>
+        <div class="text-block-3">Search                                     </div>
+        <div class="w-nav-button">
+          <div class="w-icon-nav-menu"></div>
+        </div>
+      </div>
+    </div>
+    </div>
+    {% endblock %}
+    {% block content %}{% endblock %}
+    </body>
+    </html>
