--- a/activity/templates/base.html
+++ b/activity/templates/base.html
@@ -25,11 +25,24 @@
   <div>
     <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar-2 w-nav">
       <div class="w-container">
-        <a href="index.html" class="w-nav-brand w--current">
+        <a href="{% url 'index' %}" class="w-nav-brand w--current">
           <div class="text-block-2">Docent</div>
         </a>
-        <nav role="navigation" class="w-nav-menu"><a href="#" class="nav-link-5 w-nav-link">Sign Up</a><a href="#" class="nav-link-3 w-nav-link">Sign In</a><a href="profile.html" class="nav-link-4 w-nav-link">Profile</a></nav>
-        <div class="text-block-3">Search                                     </div>
+        <nav role="navigation" class="w-nav-menu">
+            <form type="get" action="." class="w-nav-link">
+                <input  id="search_box" type="text" name="search_box"  placeholder="Search..." >
+                <button id="search_submit" type="submit" >Submit</button>
+              </form>
+
+          {% if user.is_authenticated %}
+            <a href="{% url 'profile' %}" class="nav-link-4 w-nav-link">Profile</a></nav>
+            <a href="{% url 'logout' %}?next={{request.path}}" class="nav-link-4 w-nav-link">Logout</a>
+
+          {% else %}
+            <a href="{% url 'signup'%}" class="nav-link-5 w-nav-link">Sign Up</a>
+            <a href="{% url 'login' %}?next={{request.path}}" class="nav-link-3 w-nav-link">Sign In</a>
+          {% endif %} 
+          
         <div class="w-nav-button">
           <div class="w-icon-nav-menu"></div>
         </div>
