--- a/activity/templates/activity/profile.html
+++ b/activity/templates/activity/profile.html
@@ -1,44 +1,56 @@
 {% extends "base.html" %}
 {% block content %}
 
-  <div class="section">
-    <div class="container-2 w-container">
-      <h1 class="heading-10">Sophia&#x27;s Profile </h1>
-    </div>
+<div class="section">
+  <div class="container-2 w-container">
+    <h1 class="heading-10">{{ user.get_username }}'s Profile </h1>
   </div>
-  <div class="section-2">
-    <div class="w-container">
-      <div class="columns-2 w-row">
-        <div class="w-col w-col-6">
-          <div class="div-block-3"><img src="images/Generic-Profile.jpg" width="167" alt="" class="image">
-            <h4 class="heading-12">Sophia Harrigan</h4>
-            <h5 class="heading-13">Profile Info Here</h5>
-          </div>
-        </div>
-        <div class="column-4 w-col w-col-6">
-          <div class="div-block-2">
-            <h1 class="heading-11">User Interests</h1>
-            <div data-delay="0" class="w-dropdown">
-              <div class="dropdown-toggle-3 w-dropdown-toggle">
-                <div class="w-icon-dropdown-toggle"></div>
-                <div>Add Interests</div>
-              </div>
-              <nav class="w-dropdown-list"><a href="#" class="w-dropdown-link">Link 1</a><a href="#" class="w-dropdown-link">Link 2</a><a href="#" class="w-dropdown-link">Link 3</a></nav>
-            </div>
-            <ul class="w-list-unstyled">
-              <li class="list-item-2">Entertainment</li>
-              <li class="list-item-3">Sports</li>
-              <li class="list-item-4">Outdoor</li>
-            </ul>
-          </div>
+</div>
+<div class="section-2">
+  <div class="w-container">
+    <div class="columns-2 w-row">
+      <div class="w-col w-col-6">
+        <h4 class="heading-12">{{ user.get_username }}</h4>
+        <h5 class="heading-13">Profile Info Here</h5>
+      </div>
+    </div>
+    <div class="column-4 w-col w-col-6">
+      <div class="div-block-2">
+        <h1 class="heading-11">User Interests</h1>
+        <div data-delay="0" class="w-dropdown">
+          <form type="get" action=".">
+            <select name="new_interest" class="dropdown-toggle-3 w-dropdown-toggle" onchange="this.form.submit()">
+              <option value="" disabled selected>Choose an Interest</option>
+              {% if interest_list %}
+              {% for type in interest_list %}
+              <option value={{type.activity_type}}>{{type.activity_type}}</option>
+              {% endfor %}
+              {% endif %}
+            </select>
+
+          </form>
+          <form type="get" action=".">
+              <select name="old_interest" class="dropdown-toggle-3 w-dropdown-toggle" onchange="this.form.submit()">
+                <option value="" disabled selected>Choose an Interest</option>
+                {% if user_interest_list %}
+                {% for int in user_interest_list %}
+                <option value={{int.activity_type}}>{{int.activity_type}}</option>
+                {% endfor %}
+                {% endif %}
+              </select>
+  
+            </form>
         </div>
       </div>
     </div>
   </div>
-  <div>
-    <h1 class="heading-14">Saved Activities</h1>
-  </div>
-  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+</div>
+</div>
+</div>
+<div>
+  <h1 class="heading-14">Saved Activities</h1>
+</div>
+<script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+<!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 {% endblock %}
