--- a/activity/templates/base.html
+++ b/activity/templates/base.html
@@ -2,6 +2,7 @@
 <!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Thu Jan 24 2019 01:44:37 GMT+0000 (UTC)  -->
 <html data-wf-page="5c35037c38fadfa526bb90b9" data-wf-site="5c35037c38fadfd2c0bb90b6">
+
 <head>
   <meta charset="utf-8">
   {% block title %}<title>Docent</title>{% endblock %}
@@ -12,16 +13,33 @@
   <link href="{% static 'css/webflow.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'css/docent-f9cce3.webflow.css' %}" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","Lora:regular,italic,700","Oxygen:300,regular,700"]  }});</script>
+  <script type="text/javascript">
+    WebFont.load({
+      google: {
+        families: ["Merriweather:300,300italic,400,400italic,700,700italic,900,900italic",
+          "Lora:regular,italic,700", "Oxygen:300,regular,700"
+        ]
+      }
+    });
+  </script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script type="text/javascript">
+    ! function (o, c) {
+      var n = c.documentElement,
+        t = " w-mod-";
+      n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className +=
+        t + "touch")
+    }(window, document);
+  </script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
-  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
   <script src="{% static 'js/webflow.js' %}" type="text/javascript"></script>
 </head>
+
 <body>
-{% block header%}
+  {% block header%}
   <div>
     <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar-2 w-nav">
       <div class="w-container">
@@ -29,27 +47,29 @@
           <div class="text-block-2">Docent</div>
         </a>
         <nav role="navigation" class="w-nav-menu">
-            <form type="get" action="." class="w-nav-link">
-                <input  id="search_box" type="text" name="search_box"  placeholder="Search..." >
-                <button id="search_submit" type="submit" >Submit</button>
-              </form>
+          <form type="get" action="." class="w-nav-link">
+            <input id="search_box" type="text" name="search_box" placeholder="Search...">
+            <button id="search_submit" type="submit">Submit</button>
+          </form>
 
           {% if user.is_authenticated %}
-            <a href="{% url 'profile' %}" class="nav-link-4 w-nav-link">Profile</a></nav>
-            <a href="{% url 'logout' %}?next={{request.path}}" class="nav-link-4 w-nav-link">Logout</a>
+          <a href="{% url 'profile' %}" class="nav-link-4 w-nav-link">Profile</a>
+        </nav>
+        <a href="{% url 'logout' %}?next={{request.path}}" class="nav-link-4 w-nav-link">Logout</a>
 
-          {% else %}
-            <a href="{% url 'signup'%}" class="nav-link-5 w-nav-link">Sign Up</a>
-            <a href="{% url 'login' %}?next={{request.path}}" class="nav-link-3 w-nav-link">Sign In</a>
-          {% endif %} 
-          
+        {% else %}
+        <a href="{% url 'signup'%}" class="nav-link-5 w-nav-link">Sign Up</a>
+        <a href="{% url 'login' %}?next={{request.path}}" class="nav-link-3 w-nav-link">Sign In</a>
+        {% endif %}
+
         <div class="w-nav-button">
           <div class="w-icon-nav-menu"></div>
         </div>
       </div>
     </div>
-    </div>
-    {% endblock %}
-    {% block content %}{% endblock %}
-    </body>
-    </html>
+  </div>
+  {% endblock %}
+  {% block content %}{% endblock %}
+</body>
+
+</html>
