--- a/activity/templates/index_og.html
+++ b/activity/templates/index_og.html
@@ -1,90 +1,93 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="hero-section">
-        <div class="hero-content w-container">
-          <div data-ix="hero-text" class="hero-heading">Have plans?</div>
-          <div data-ix="hero-text-2" class="hero-subheading">Nope? Don&#x27;t stress, Docent does.</div>
+  <div class="hero-content w-container">
+    <div data-ix="hero-text" class="hero-heading">Have plans?</div>
+    <div data-ix="hero-text-2" class="hero-subheading">Nope? Don&#x27;t stress, Docent does.</div>
+  </div>
+</div>
+<div class="category-section">
+  <div class="w-container">
+    <div class="w-layout-grid grid"><a id="w-node-22a5fb2110e5-26bb90b9" href="#" class="section-link">Entertainment</a><a
+        id="w-node-5a397cfa2271-26bb90b9" href="#" class="section-link">Music</a><a id="w-node-a5b83fcb1abb-26bb90b9"
+        href="#" class="section-link">Food &amp; Drink</a><a id="w-node-66c38e0410d6-26bb90b9" href="#" class="section-link">Sports</a><a
+        id="w-node-0799e9fbf77d-26bb90b9" href="#" class="section-link">Other</a></div>
+  </div>
+</div>
+<div id="posts" class="main-section bottom-padding">
+  <div id="Latest-post" class="w-container">
+    <div>
+      <h2 class="section-title">Featured Activities</h2>
+      <div class="med-divider"></div>
+    </div>
+    <div class="columns w-row">
+      <div class="column w-col w-col-4">
+        <div class="activity-border">
+          <h1 class="activity-header">Golf Course</h1>
+          <div class="activity-text-layout">123 Golf Ave. <br>775-123-4567</div>
         </div>
       </div>
-      <div class="category-section">
-        <div class="w-container">
-          <div class="w-layout-grid grid"><a id="w-node-22a5fb2110e5-26bb90b9" href="#" class="section-link">Entertainment</a><a id="w-node-5a397cfa2271-26bb90b9" href="#" class="section-link">Music</a><a id="w-node-a5b83fcb1abb-26bb90b9" href="#" class="section-link">Food &amp; Drink</a><a id="w-node-66c38e0410d6-26bb90b9" href="#" class="section-link">Sports</a><a id="w-node-0799e9fbf77d-26bb90b9" href="#" class="section-link">Other</a></div>
+      <div class="column-2 w-col w-col-4">
+        <div class="activity-border">
+          <h1 class="activity-header">Movie Theater</h1>
+          <div class="activity-text-layout">123 Movie Street <br>775-123-4567</div>
         </div>
       </div>
-      <div id="posts" class="main-section bottom-padding">
-        <div id="Latest-post" class="w-container">
-          <div>
-            <h2 class="section-title">Featured Activities</h2>
-            <div class="med-divider"></div>
-          </div>
-          <div class="columns w-row">
-            <div class="column w-col w-col-4">
-              <div class="activity-border">
-                <h1 class="activity-header">Golf Course</h1>
-                <div class="activity-text-layout">123 Golf Ave. <br>775-123-4567</div>
-              </div>
-            </div>
-            <div class="column-2 w-col w-col-4">
-              <div class="activity-border">
-                <h1 class="activity-header">Movie Theater</h1>
-                <div class="activity-text-layout">123 Movie Street <br>775-123-4567</div>
-              </div>
-            </div>
-            <div class="column-3 w-col w-col-4">
-              <div class="activity-border">
-                <h1 class="activity-header">Wendy&#x27;s</h1>
-                <div class="activity-text-layout">582 Wendy Parkway<br>775-532-9987</div>
-              </div>
-            </div>
-          </div>
-          <div class="w-row">
-            <div class="column w-col w-col-4">
-              <div class="activity-border">
-                <h1 class="activity-header">Chipotle</h1>
-                <div class="activity-text-layout">123 Food Ave. <br>775-482-4467</div>
-              </div>
-            </div>
-            <div class="column-2 w-col w-col-4">
-              <div class="activity-border">
-                <h1 class="activity-header">UNR Basketball Game</h1>
-                <div class="activity-text-layout">1664 N. Virginia Street<br>775-123-4567</div>
-              </div>
-            </div>
-            <div class="column-3 w-col w-col-4">
-              <div class="activity-border">
-                <h1 class="activity-header">Ice Skating Rink</h1>
-                <div class="activity-text-layout">572 Ice Road<br>775-532-9987</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="w-container">
-          <div class="section-heading">
-            <h2 class="section-title">Suggested Activities</h2>
-            <div class="med-divider"></div>
-          </div>
-          <div class="w-row">
-            <div class="w-col w-col-4">
-              <div class="activity-border">
-                <h1 class="activity-header">Local Band</h1>
-                <div class="activity-text-layout">123 University Ave.<br>775-123-4567</div>
-              </div>
-            </div>
-            <div class="w-col w-col-4">
-              <div class="activity-border">
-                <h1 class="activity-header">Trail Head</h1>
-                <div class="activity-text-layout">382 Hike Road<br>775-143-4817</div>
-              </div>
-            </div>
-            <div class="w-col w-col-4">
-              <div class="activity-border">
-                <h1 class="activity-header">Baseball Game</h1>
-                <div class="activity-text-layout">123 Reno Street<br>775-233-0987</div>
-              </div>
-            </div>
-          </div>
+      <div class="column-3 w-col w-col-4">
+        <div class="activity-border">
+          <h1 class="activity-header">Wendy&#x27;s</h1>
+          <div class="activity-text-layout">582 Wendy Parkway<br>775-532-9987</div>
         </div>
       </div>
     </div>
+    <div class="w-row">
+      <div class="column w-col w-col-4">
+        <div class="activity-border">
+          <h1 class="activity-header">Chipotle</h1>
+          <div class="activity-text-layout">123 Food Ave. <br>775-482-4467</div>
+        </div>
+      </div>
+      <div class="column-2 w-col w-col-4">
+        <div class="activity-border">
+          <h1 class="activity-header">UNR Basketball Game</h1>
+          <div class="activity-text-layout">1664 N. Virginia Street<br>775-123-4567</div>
+        </div>
+      </div>
+      <div class="column-3 w-col w-col-4">
+        <div class="activity-border">
+          <h1 class="activity-header">Ice Skating Rink</h1>
+          <div class="activity-text-layout">572 Ice Road<br>775-532-9987</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="w-container">
+    <div class="section-heading">
+      <h2 class="section-title">Suggested Activities</h2>
+      <div class="med-divider"></div>
+    </div>
+    <div class="w-row">
+      <div class="w-col w-col-4">
+        <div class="activity-border">
+          <h1 class="activity-header">Local Band</h1>
+          <div class="activity-text-layout">123 University Ave.<br>775-123-4567</div>
+        </div>
+      </div>
+      <div class="w-col w-col-4">
+        <div class="activity-border">
+          <h1 class="activity-header">Trail Head</h1>
+          <div class="activity-text-layout">382 Hike Road<br>775-143-4817</div>
+        </div>
+      </div>
+      <div class="w-col w-col-4">
+        <div class="activity-border">
+          <h1 class="activity-header">Baseball Game</h1>
+          <div class="activity-text-layout">123 Reno Street<br>775-233-0987</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
 {% endblock %}
