--- a/activity/static/css/style.css
+++ b/activity/static/css/style.css
@@ -1,160 +1,166 @@
 body {
-    background-color: #336fce; 
-    margin: 0;
-    font-family: Courier New;
-  }
-  
-  .topnav {
-    width:100%;
-    margin: 0;
-    overflow: hidden;
-    background-color: #3d434c;
-  }
-  
-  .topnav a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 14px;
-    text-decoration: none;
-    font-size: 24.5px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #252a33;
-    color: white;
-  }
-  
-  .dropdown {
-      float: left;
-      overflow: hidden;
-  }
-  
-  .topnav .dropdown .dropbtn {
-      font-family: inherit;
-      font-size: 24.5px;
-      border: none;
-      outline: none;
-      color: white;
-      padding: 14px 16px;
-      background-color: inherit;
-  }
-  
-  .topnav .dropdown .dropbtnactive {
-      font-family: inherit;
-      font-size: 24.5px;
-      border: none;
-      outline: none;
-      color: white;
-      padding: 14px 16px;
-      background-color: #252a33;
-  }
-  
-  .dropdown:hover .dropbtn, .dropdown:hover .dropbtnactive {
-      background-color: red;
-  }
-  
-  .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
-  }
-  
-  .dropdown-content a {
-      float: none;
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-  }
-  
-  .dropdown-content a.active {
-      float: none;
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-      background-color: #68707f;
-  }
-  
-  .dropdown-content a:hover {
-      background-color: #ddd;
-  }
-  
-  .dropdown:hover .dropdown-content {
-      display: block;
-  }
-  
+  background-color: #336fce;
+  margin: 0;
+  font-family: Courier New;
+}
+
+.topnav {
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+  background-color: #3d434c;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 14px;
+  text-decoration: none;
+  font-size: 24.5px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #252a33;
+  color: white;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.topnav .dropdown .dropbtn {
+  font-family: inherit;
+  font-size: 24.5px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+}
+
+.topnav .dropdown .dropbtnactive {
+  font-family: inherit;
+  font-size: 24.5px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: #252a33;
+}
+
+.dropdown:hover .dropbtn,
+.dropdown:hover .dropbtnactive {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a.active {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  background-color: #68707f;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.topnav .search-container {
+  float: left;
+}
+
+.topnav input[type=text] {
+  padding: 4px;
+  margin-top: 10px;
+  font-size: 18px;
+  border: none;
+}
+
+.topnav .search-container button {
+  float: left;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .search-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
   .topnav .search-container {
-    float: left;
+    float: none;
   }
-  
-  .topnav input[type=text] {
-    padding: 4px;
-    margin-top: 10px;
-    font-size: 18px;
-    border: none;
-  }
-  
+
+  .topnav a,
+  .topnav input[type=text],
   .topnav .search-container button {
-    float: left;
-    background: #ddd;
-    font-size: 17px;
-    border: none;
-    cursor: pointer;
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
   }
-  
-  .topnav .search-container button:hover {
-    background: #ccc;
+
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
   }
-  
-  @media screen and (max-width: 600px) {
-    .topnav .search-container {
-      float: none;
-    }
-    .topnav a, .topnav input[type=text], .topnav .search-container button {
-      float: none;
-      display: block;
-      text-align: left;
-      width: 100%;
-      margin: 0;
-      padding: 14px;
-    }
-    .topnav input[type=text] {
-      border: 1px solid #ccc;  
-    }
-  }
-  
-    .logo {
-      padding: 10px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      height: 250px;
-      width: 250px;
-      float: center;
-  }
-  
-  .logow {
-      padding: 10px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      height: 250px;
-      width: 400px;
-      float: center;
-  }
+}
+
+.logo {
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 250px;
+  width: 250px;
+  float: center;
+}
+
+.logow {
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 250px;
+  width: 400px;
+  float: center;
+}
+
 .wrapper {
   padding: 0;
   margin: 0;
