--- a/activity/templates/base.html
+++ b/activity/templates/base.html
@@ -10,10 +10,12 @@
   <meta content="Webflow" name="generator">
   {% load static %}
   <link rel="shortcut icon" href="{%  static 'images/favicon.png' %}">
+  <link href="{% static 'css/gicon.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'css/normalize.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'css/webflow.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'css/docent-f9cce3.webflow.css' %}" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
+
   <script type="text/javascript">
     WebFont.load({
       google: {
@@ -48,7 +50,7 @@
         <nav role="navigation" class="w-nav-menu">
           <form type="get" action="." class="w-nav-link">
             <input id="search_box" type="text" name="search_box" placeholder="Search...">
-            <button id="search_submit" type="submit">Submit</button>
+            <button id="search_submit" type="submit"><span class="glyphicon glyphicon-search"></span></button>
           </form>
 
           {% if user.is_authenticated %}
