--- a/activity/templates/base.html
+++ b/activity/templates/base.html
@@ -15,6 +15,7 @@
   <link href="{% static 'css/webflow.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'css/docent-f9cce3.webflow.css' %}" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
   <script type="text/javascript">
     WebFont.load({
@@ -74,5 +75,5 @@
   {% endblock %}
   {% block content %}{% endblock %}
 </body>
-
+<script src="{% static 'js/app.js' %}" type="text/javascript"></script>
 </html>
