Adding removal of activities with ajax/jquery

--- a/activity/templates/activity/profile.html
+++ b/activity/templates/activity/profile.html
@@ -57,11 +57,12 @@
           <div class="activity-border">
             <h1 class="activity-header">{{activity.0.name}}</h1>
             <div class="activity-text-layout">{{activity.0.address_1}}<br>{{activity.0.phone_number}}</div>
-            <form method="get" action=".">
-              <button onclick="this.form.submit()" style="background:transparent; border:none;"><span class="glyphicon glyphicon-star"
-                  style="position: absolute; right: 0; bottom: 0; font-size: 20px;"></span></button>
-              <input name="save_act" type="hidden" value="{{activity.0.ID}}">
-            </form>
+            {% if user.is_authenticated %}
+            <div class="{{activity.0.ID}}">
+              <a class="removeLike" href="#" data-catid="{{ activity.0.ID }}"><span class="glyphicon glyphicon-star"
+                  style="position: absolute; right: 0; bottom: 0; font-size: 20px; color: black;"></a>
+            </div>
+            {% endif %}
           </div>
         </div>
         {% if activity.1 %}
@@ -69,11 +70,12 @@
           <div class="activity-border">
             <h1 class="activity-header">{{activity.1.name}}</h1>
             <div class="activity-text-layout">{{activity.1.address_1}}<br>{{activity.1.phone_number}}</div>
-            <form method="get" action=".">
-              <button onclick="this.form.submit()" style="background:transparent; border:none;"><span class="glyphicon glyphicon-star"
-                  style="position: absolute; right: 0; bottom: 0; font-size: 20px;"></span></button>
-              <input name="save_act" type="hidden" value="{{activity.0.ID}}">
-            </form>
+            {% if user.is_authenticated %}
+            <div class="{{activity.1.ID}}">
+              <a class="removeLike" href="#" data-catid="{{ activity.1.ID }}"><span class="glyphicon glyphicon-star"
+                  style="position: absolute; right: 0; bottom: 0; font-size: 20px; color: black;"></a>
+            </div>
+            {% endif %}
           </div>
         </div>
         {% endif %}
@@ -83,16 +85,18 @@
           <div class="activity-border">
             <h1 class="activity-header">{{activity.2.name}}</h1>
             <div class="activity-text-layout">{{activity.2.address_1}}<br>{{activity.2.phone_number}}</div>
-            <form method="get" action=".">
-              <button onclick="this.form.submit()" style="background:transparent; border:none;"><span class="glyphicon glyphicon-star"
-                  style="position: absolute; right: 0; bottom: 0; font-size: 20px;"></span></button>
-              <input name="save_act" type="hidden" value="{{activity.0.ID}}">
-            </form>
+            {% if user.is_authenticated %}
+            <div class="{{activity.2.ID}}">
+              <a class="removeLike" href="#" data-catid="{{ activity.2.ID }}"><span class="glyphicon glyphicon-star"
+                  style="position: absolute; right: 0; bottom: 0; font-size: 20px; color: black;"></a>
+            </div>
+            {% endif %}
           </div>
         </div>
         {% endif %}
       </div>
       {% endfor %}
+
 
     </div>
   </div>
