--- a/activity/templates/index.html
+++ b/activity/templates/index.html
@@ -25,8 +25,10 @@
     </div>
     {% for activity in activity_list %}
     <div class="columns w-row">
+
       <div class="column w-col w-col-4">
-        <div class="activity-border">
+        <div class="activity-border" data-toggle="modal" data-target="#modal_{{activity.0.ID}}">
+
           <h1 class="activity-header">{{activity.0.name}}</h1>
           <div class="activity-text-layout">{{activity.0.address_1}}<br>{{activity.0.phone_number}}</div>
           {% if user.is_authenticated %}
@@ -42,6 +44,26 @@
           {% endif %}
         </div>
       </div>
+      <div class="modal fade" id="modal_{{activity.0.ID}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">{{activity.0.name}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
       {% if activity.1 %}
       <div class="column-2 w-col w-col-4">
         <div class="activity-border">
@@ -81,6 +103,7 @@
         </div>
       </div>
       {% endif %}
+
     </div>
     {% endfor %}
 
